--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,15 +8,21 @@
     },
     "permissions": [
         "tabs",
-        "storage"
-    ],
-    "host_permissions": [
-        "<all_urls>"
+        "storage",
+        "commands"
     ],
     "icons": {
         "16": "/images/get_started16.png",
         "32": "/images/get_started32.png",
         "48": "/images/get_started48.png",
         "128": "/images/get_started128.png"
+    },
+    "commands": {
+        "switch_tab": {
+            "suggested_key": {
+                "default": "Alt+Q"
+            },
+            "description": "Switch to the last used tab"
+        }
     }
 }
